<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="toolbar" type="id" />
    <item name="content_container" type="id" />
    <item name="bottom_navigation" type="id" />
    <item name="navigation_optimize" type="id" />
    <item name="navigation_restore" type="id" />
    <item name="navigation_about" type="id" />
    <item name="placeholder_title" type="id" />
    <item name="selected_folder" type="id" />
    <item name="pick_folder" type="id" />
    <item name="mode_toggle" type="id" />
    <item name="mode_safe" type="id" />
    <item name="mode_aggressive" type="id" />
    <item name="dry_run" type="id" />
    <item name="apk_lab" type="id" />
    <item name="text_minify" type="id" />
    <item name="start_optimization" type="id" />
    <item name="cancel_optimization" type="id" />
    <item name="run_phase" type="id" />
    <item name="current_path" type="id" />
    <item name="run_progress" type="id" />
    <item name="live_counters" type="id" />
    <item name="savings" type="id" />
    <item name="terminal_message" type="id" />
    <item name="restore_empty_state" type="id" />
    <item name="restore_select_all" type="id" />
    <item name="restore_selected" type="id" />
    <item name="restore_entry_checkbox" type="id" />
    <item name="cancel_restore" type="id" />
    <item name="restore_terminal_summary" type="id" />
    <item name="restore_progress" type="id" />
    <item name="about_theme_group" type="id" />
    <item name="about_update_status" type="id" />
    <item name="about_selected_asset" type="id" />
    <item name="about_check_updates" type="id" />
    <item name="about_view_release" type="id" />
</resources>
